# cosy-lang

./: .gitattributes  .gitignore  Cargo.toml  CargoOLD.toml  README.md  run.sh
app/: main.rs
cosyc/: Cargo.toml
design/: conditions.cosy  functions.cosy  identifiers.cosy  variables.cosy  void.cosy
example/: example.nux
examples/: arrays.cosy  borrowing.cosy  brainstorm.cosy  calling_conventions.cosy  comments.cosy  comments.fi  comments.nux  comments.uw  conditions.cosy  conditions.fi  conditions.nux  conditions.uw  directives.cosy  do_notation.cosy  functions.cosy  functions.fi  functions.fii  functions.nux  functions.uw  identifiers.cosy  interfaces.cosy  loops.cosy  loops.fi  loops.nux  loops.uw  members.cosy  members.fii  members.nux  members.uw  members.xi  modules.cosy  monads.cosy  operators.cosy  pointers.cosy  privacy.cosy  structs.cosy  subs.cosy  test.cosy  types.cosy  variables.cosy  (+4 more)
lib_cosyc/: common.rs  diagnostics.rs  error.rs  identity.rs  issues.rs  lexer.rs  lib.rs  name_table.rs  parse.rs  parser.rs  scanner.rs  session.rs  span.rs  token.rs
lib_cosyc_old/: issues.rs  name_table.rs  scanner.rs
libcosyc_abstract/: Cargo.toml  README.md
libcosyc_codegen/: Cargo.toml  README.md
libcosyc_compiler/: Cargo.toml
libcosyc_compiler/src/: lib.rs
libcosyc_concrete/: Cargo.toml  README.md
libcosyc_diagnostic/: Cargo.toml
libcosyc_diagnostics/: Cargo.toml  README.md
libcosyc_ident/: Cargo.toml
libcosyc_ir/: Cargo.toml
libcosyc_parse/: Cargo.toml
libcosyc_scan/: Cargo.toml
libcosyc_source/: Cargo.toml
libcosyc_span/: Cargo.toml
(+173 files in other folders)
