[package]
name = "libcosyc_compiler"
version = "0.1.0"
authors = ["NuxiiGit <nuxii09@gmail.com>"]
edition = "2018"

[dependencies]
libcosyc_parse = { path = "../libcosyc_parse" }
libcosyc_ir = { path = "../libcosyc_ir" }
libcosyc_codegen = { path = "../libcosyc_codegen" }
libcosyc_diagnostic = { path = "../libcosyc_diagnostic" }
